--- a/header.css
+++ b/header.css
@@ -2,24 +2,6 @@
 
     width: 24px;
     height: 24px;
-    background-image: url("../Menu\ \(2\).svg");
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url("../img/Menu\ \(2\).svg");
     display: inline-block;
 }
-
-.cabeçalho{
-
-    background-color: var(--branco);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-        }
-
-        .container{
-            display: flex;
-            align-items: center;
-        }
-        .container__imagem{
-            padding: 1em;
-        }
