--- a/header.css
+++ b/header.css
@@ -5,3 +5,16 @@
     background-image: url("../img/Menu\ \(2\).svg");
     display: inline-block;
 }
+
+.cabeçalho{
+    background-color: var(--branco);
+    display: flex;
+
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+}
